--- a/custom.css
+++ b/custom.css
@@ -40,3 +40,12 @@
     color: black;
 
 }
+
+@media only screen and (max-width: 768px) {
+.btn-primary, .btn-secondary{
+    margin-left: 0px !important;
+    margin-top: 20px !important;
+}
+
+}
+
